--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@
     margin: 0px auto;
     padding: 15px;
     border-radius: 20px;
-    color: gray;
+    color: rgb(0, 0, 0);
     font-weight: bold;
     border: 1px solid whitesmoke;
     background: #EBEBEB;
